--- a/src/pages/categorias/categorias-lista/categorias-lista.html
+++ b/src/pages/categorias/categorias-lista/categorias-lista.html
@@ -12,15 +12,15 @@
         <h3>{{ categoria.name }}</h3>
       </ion-item>
       <ion-item-options side="left">
-        <button ion-button color="secondary" (click)="editItemCategorias(categoria)"><ion-icon name="create"></ion-icon>Editar</button>
+        <button ion-button color="secondary" (click)="editItemCategoria(categoria)"><ion-icon name="create"></ion-icon>Editar</button>
       </ion-item-options>
       <ion-item-options side="right">
-        <button ion-button color="danger" (click)="removeItemCategorias(categoria.key)"><ion-icon name="trash"></ion-icon>Excluir</button>
+        <button ion-button color="danger" (click)="removeItemCategoria(categoria.key)"><ion-icon name="trash"></ion-icon>Excluir</button>
       </ion-item-options>
     </ion-item-sliding>
   </ion-list>
 
   <ion-fab right bottom>
-      <button ion-fab (click)="newItemCategorias()"><ion-icon name="add"></ion-icon></button>
+      <button ion-fab color="secondary" (click)="newItemCategoria()"><ion-icon name="add"></ion-icon></button>
   </ion-fab>
 </ion-content>
